--- a/src/components/Links/Links.css
+++ b/src/components/Links/Links.css
@@ -19,3 +19,19 @@
 .link-selected {
     font-weight: 800;
 }
+
+@media only screen and (max-width: 800px) {
+    .links {
+        flex-direction: row;
+    }
+
+    .link, .link:visited {
+        display: flex;
+        align-items: center;
+        gap: .5rem;
+        text-transform: capitalize;
+        font-size: 1.4rem;
+        font-weight: 400;
+        text-decoration: none;
+    }
+}
