--- a/src/components/inventory/Inventory.css
+++ b/src/components/inventory/Inventory.css
@@ -48,3 +48,38 @@
         height: 100%;
     }
 }
+
+@media only screen and (max-width: 800px) {
+    .inventory {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: max-content max-content 90%;
+        width: 100%;
+        max-width: 75rem;
+        height: 100%;
+        gap: 1rem;
+        border-radius: 2rem;
+        padding: 2rem;
+        background-color: var(--white);
+    }
+
+    .inventory-title {
+        font-size: 1.6rem;
+    }
+
+    .inventory-buttons {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .inventory-buttons>a {
+        text-decoration: none;
+        background-color: var(--brown-light);
+        color: var(--white);
+        border-radius: .5rem;
+        padding: .25rem 1rem;
+        font-size: 1.2rem;
+    }
+}
