--- a/src/components/nav-buttons/NavButtons.css
+++ b/src/components/nav-buttons/NavButtons.css
@@ -34,3 +34,9 @@
 }
 
 .nav-button:hover {}
+
+@media only screen and (max-width: 800px) {
+    .nav-buttons {
+        display: none;
+    }
+}
