--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -19,3 +19,20 @@
         width: 25rem;
     }
 }
+
+@media only screen and (max-width: 800px) {
+    .navbar {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        gap: 2rem;
+        justify-items: center;
+        height: 8rem;
+        width: 100vw;
+        box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
+        padding: 0rem 0rem;
+        background-color: var(--white);
+        border-radius: 0rem 0rem 1rem 1rem;
+        margin: 0rem 0rem;
+    }
+}
