--- a/src/components/user_preview/UserPreview.css
+++ b/src/components/user_preview/UserPreview.css
@@ -23,3 +23,9 @@
     font-weight: 800;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 800px) {
+    .user-preview {
+        display: none;
+    }
+}
